[build-system]
requires = ['Django', 'setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py310']

[tool.coverage.run]
branch = true
source = ['django_cryptography']

[tool.coverage.report]
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
ignore_errors = true
omit = ['docs/*', 'tests/*']

[tool.django-stubs]
django_settings_module = 'tests.settings'

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = ['mypy_django_plugin.main']

[[tool.mypy.overrides]]
module = ['appconf']
ignore_missing_imports = true

[tool.ruff]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "E",   # pycodestyle (Error)
    "ERA", # eradicate
    "F",   # Pyflakes
    "I",   # isort
    "RUF", # Ruff-specific
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle (Warning)

]
exclude = ["docs"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["ERA"]

[tool.tox]
# language=ini
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    {py310,py311,py312}-django42,
    {py310,py311,py312,py313}-django52,
    {py312,py313,py314}-django60,
    {py313,py314}-djangomain,
isolated_build = True

[testenv]
deps =
    coverage[toml]
    django42: Django>=4.2,<4.3
    django52: Django>=5.2,<5.3
    django60: Django>=6.0,<6.1
    djangomain: https://github.com/django/django/archive/main.tar.gz
commands =
    {envpython} -m coverage run --context='{envname}' runtests.py {posargs}
"""
