[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cryptography"
dynamic = ["version"]
description = "Easily encrypt data in Django"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "George Marshall", email = "george@georgemarshall.name" }]
dependencies = [
    "Django>=4.2",
    "cryptography>=3.4.4",
    "django-appconf",
    "typing-extensions>=3.7.4.3",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]

[project.urls]
"Bug Reports" = "https://github.com/georgemarshall/django-cryptography/issues"
Source = "https://github.com/georgemarshall/django-cryptography"
Documentation = "https://django-cryptography.readthedocs.io"

[project.optional-dependencies]
mypy = ["django-stubs", "mypy"]

[dependency-groups]
test = ["coverage[toml]", "pytest", "pytest-django", "tox"]
lint = ["django-stubs", "mypy", "pre-commit"]
dev = [{ include-group = "test" }, { include-group = "lint" }]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "django_cryptography.__version__" }

[tool.setuptools.packages.find]
include = ["django_cryptography", "django_cryptography.*"]

[tool.setuptools.package-data]
django_cryptography = ["py.typed"]

[tool.black]
target-version = ['py310']

[tool.coverage.run]
branch = true
source = ['django_cryptography']

[tool.coverage.report]
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
ignore_errors = true
omit = ['docs/*', 'tests/*']

[tool.django-stubs]
django_settings_module = 'tests.settings'

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = ['mypy_django_plugin.main']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*", "*TestCase"]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ['appconf']
ignore_missing_imports = true

[tool.ruff]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "E",   # pycodestyle (Error)
    "ERA", # eradicate
    "F",   # Pyflakes
    "I",   # isort
    "RUF", # Ruff-specific
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle (Warning)

]
exclude = ["docs"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["ERA"]

[tool.tox]
# language=ini
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    {py310,py311,py312}-django42,
    {py310,py311,py312,py313}-django52,
    {py312,py313,py314}-django60,
    {py313,py314}-djangomain,
isolated_build = True

[testenv]
deps =
    coverage[toml]
    pytest
    pytest-django
    django42: Django>=4.2,<4.3
    django52: Django>=5.2,<5.3
    django60: Django>=6.0,<6.1
    djangomain: https://github.com/django/django/archive/main.tar.gz
commands =
    {envpython} -m coverage run --context='{envname}' -m pytest {posargs}
"""
